@@ -73,6 +73,7 @@ RoleChecks\RoleChecks.lua
 # Merchants & Trainers
 Merchants\Repair.lua
 Merchants\Trainers.lua
+Merchants\QuestItems.lua
 
 # Talents
 Talents\DynamicFlight.lua
